--- a/3. Коллаборативная фильтрация/sandbox3.ipynb
+++ b/3. Коллаборативная фильтрация/sandbox3.ipynb
@@ -2679,21 +2679,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ДЗ\n",
-    "\n",
-    "1) Попытаться ответить на вопросы/выдвинуть гипотезы\n",
-    "\n",
-    "2) Доделать прошлые домашния задания\n",
-    "\n",
-    "3) Прочитать статьи BM25/MatrixFactorization\n",
-    "\n",
-    "4) Поэкспериментировать с ALS (grid-search)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Links\n",
     "\n",
     "BM25\n",
@@ -2702,7 +2687,13 @@
     "\n",
     "\n",
     "Matrix factorization (ALS, SVD)\n",
-    "https://datasciencemadesimpler.wordpress.com/tag/alternating-least-squares/"
+    "https://datasciencemadesimpler.wordpress.com/tag/alternating-least-squares/\n",
+    "\n",
+    "SVD, SVD++, TimeSVD++, ALS, SLIM, FM - https://habr.com/ru/post/486802/\n",
+    "\n",
+    "BM25 - https://habr.com/ru/post/162937/\n",
+    "\n",
+    "Кратко о коллаборативной фильтрации - https://habr.com/ru/post/150399/"
    ]
   },
   {
